--- a/index.html
+++ b/index.html
@@ -700,12 +700,17 @@
                 </div>
                 <div class="benefit-card">
                     <div class="benefit-icon"><i class="fas fa-bolt"></i></div>
-                    <h3>Resultados Rápidos</h3>
+                    <h3>Resultados Comprovados</h3>
                     <p>Alívio da dor, cicatrização acelerada e renovação celular. Efeitos percebidos nas primeiras aplicações.</p>
                 </div>
                 <div class="benefit-card">
                     <div class="benefit-icon"><i class="fas fa-heartbeat"></i></div>
                     <h3>Natural e Sem Efeitos Colaterais</h3>
+                    <div class="benefit-card">
+                    <div class="benefit-icon"><i class="fas fa-home"></i></div>
+                    <h3>Indicado para qualquer idade</h3>
+                    <p>Não há restrições para idade, devido a alta segurança na dosagem do ozônio.</p>
+                </div>
                     <p>Use o poder do ozônio medicinal, uma terapia natural que não agride o organismo quando aplicada corretamente.</p>
                 </div>
             </div>
