--- a/index.html
+++ b/index.html
@@ -708,6 +708,8 @@
                     <h3>Natural e Sem Efeitos Colaterais</h3>
                     <div class="benefit-card">
                     <div class="benefit-icon"><i class="fas fa-home"></i></div>
+                </div>
+
                     <h3>Indicado para qualquer idade</h3>
                     <p>Não há restrições para idade, devido a alta segurança na dosagem do ozônio.</p>
                 </div>
