--- a/index.html
+++ b/index.html
@@ -984,8 +984,8 @@
                 <div class="footer-links">
                     <h3>Contato</h3>
                     <ul>
-                        <li><i class="fas fa-phone"></i> (11) 99999-9999</li>
-                        <li><i class="fas fa-envelope"></i> contato@ozoxx.com.br</li>
+                        <li><i class="fas fa-phone"></i> (45) 98819-5137</li>
+                        <li><i class="fas fa-envelope"></i> ozoxx.venda@gmail.com</li>
                         <li><i class="fas fa-map-marker-alt"></i> São Paulo/SP</li>
                     </ul>
                 </div>
