--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             },
             subtitulo: {
                 'A': 'Trate <strong>pé diabético, psoríase, artrose, má circulação e feridas crônicas</strong> no conforto da sua casa. Tecnologia aprovada pela ANVISA. Resultados comprovados.',
-                'B': '<strong>Resultados em 30 dias ou seu dinheiro de volta!</strong> Trate pé diabético, psoríase e dores articulares no conforto do lar. Método natural aprovado pela ANVISA.'
+                'B': '<strong>Milhares de resultos pelo Brasil!</strong> Trate pé diabético, psoríase e dores articulares no conforto do lar. Método natural aprovado pela ANVISA.'
             },
             botaoTexto: {
                 'A': 'QUERO SABER MAIS',
