--- a/index.html
+++ b/index.html
@@ -803,8 +803,8 @@
                 </div>
                 <div class="benefit-card">
                     <div class="benefit-icon"><i class="fas fa-bolt"></i></div>
-                    <h3>Resultados Rápidos</h3>
-                    <p>Alívio da dor, cicatrização acelerada e renovação celular. Efeitos percebidos nas primeiras aplicações.</p>
+                    <h3>Resultados Comprovados</h3>
+                    <p>Alívio da dor, cicatrização acelerada e renovação celular. Efeitos percebidos nas primeiras semanadas aplicações,.</p>
                 </div>
                 <div class="benefit-card">
                     <div class="benefit-icon"><i class="fas fa-heartbeat"></i></div>
