--- a/index.html
+++ b/index.html
@@ -809,7 +809,7 @@
             <div class="hero-video">
                 <div class="video-wrapper-hero">
                     <!-- SUBSTITUA SEU_ID_DO_VIDEO pelo ID real do seu vídeo do YouTube -->
-                    <!-- Exemplo: se o link do YouTube for https://www.youtube.com/watch?v=abc123, use abc123 -->
+                    <!-- Exemplo: se o link do YouTube for https://youtu.be/G6t7AZLJqPY, use abc123 -->
                     <iframe 
                         src="https://www.youtube.com/embed/SEU_ID_DO_VIDEO" 
                         title="Vídeo demonstrativo Ozoxx - Ozonioterapia Caseira"
