--- a/index.html
+++ b/index.html
@@ -811,7 +811,7 @@
                     <!-- SUBSTITUA SEU_ID_DO_VIDEO pelo ID real do seu vídeo do YouTube -->
                     <!-- Exemplo: se o link do YouTube for https://youtu.be/G6t7AZLJqPY, use abc123 -->
                     <iframe 
-                        src="https://www.youtube.com/embed/SEU_ID_DO_VIDEO" 
+                        src="https://www.youtube.com/watch?v=G6t7AZLJqPY&feature=youtu.be" 
                         title="Vídeo demonstrativo Ozoxx - Ozonioterapia Caseira"
                         frameborder="0" 
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
