--- a/index.html
+++ b/index.html
@@ -811,7 +811,7 @@
                     <!-- SUBSTITUA SEU_ID_DO_VIDEO pelo ID real do seu vídeo do YouTube -->
                     <!-- Exemplo: se o link do YouTube for https://www.youtube.com/watch?v=abc123, use abc123 -->
                     <iframe 
-                        src="<iframe width="560" height="315" src="https://www.youtube.com/embed/G6t7AZLJqPY?si=U0_3rFyBfM4aurwE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" 
+                        src="https://www.youtube.com/embed/G6t7AZLJqPY?si=U0_3rFyBfM4aurwE"
                         title="Vídeo demonstrativo Ozoxx - Ozonioterapia Caseira"
                         frameborder="0" 
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
