Update page title for Ozoxx website

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ozoxx - Ozonioterapia Caseira | Resultados Reais Comprovados</title>
+    <title>Ozoxx - Ozonioterapia Caseira com Ozoxx | Conheça como Funciona</title>
     <meta name="description" content="Veja fotos reais de clientes que trataram pé diabético, psoríase e dores com Ozoxx. Resultados comprovados. Aprovado pela ANVISA.">
     
     <!-- Meta Tags OG -->
