--- a/index.html
+++ b/index.html
@@ -1026,7 +1026,7 @@
                 <!-- 10 imagens de clientes -->
                 <div class="client-card">
                     <div class="client-photo-container">
-                        <img src="https://raw.githubusercontent.com/SEU-USUARIO/ozoxx-images/main/clientes/cliente-1.jpg" 
+                        <img src="https://raw.githubusercontent.com/ozoxxvenda/ozoxx-images/refs/heads/main/casal%20comprando%20o%20aparelho%20ozoxx.webp" 
                              class="client-photo"
                              loading="lazy"
                              width="1500"
