Update image source in client card

--- a/index.html
+++ b/index.html
@@ -1049,7 +1049,7 @@
                 
                 <div class="client-card">
                     <div class="client-photo-container">
-                        <img src="https://github.com/ozoxxvenda/ozoxx-images/blob/main/fami%CC%81lia-compra-o-Ozoxx.webp" 
+                        <img src="https://raw.githubusercontent.com/ozoxxvenda/ozoxx-images/refs/heads/main/casal-comprando-o-aparelho-ozoxx.webp" 
                              class="client-photo"
                              loading="lazy"
                              width="1500"
