Update YouTube video source in testimonial card

--- a/index.html
+++ b/index.html
@@ -1184,7 +1184,7 @@
                     <div class="video-container">
                         <div class="video-wrapper">
                             <iframe 
-                                src="https://www.youtube.com/embed/VIDEO_2" 
+                                src="https://www.youtube.com/embed/v=mVa23ZIwRl_6_at-" 
                                 title="Depoimento Psoríase" 
                                 frameborder="0" 
                                 allowfullscreen
