Fix YouTube video URL in index.html
Updated YouTube video URL in iframe.

--- a/index.html
+++ b/index.html
@@ -931,7 +931,7 @@
                 <div class="hero-video">
                     <div class="video-wrapper">
                         <iframe 
-                            src="https://www.youtube.com/watch?v=G6t7AZLJqPY&feature=youtu.be" 
+                            src="https://www.youtube.com/watch?v=G6t7AZLJqPY" 
                             title="Ozoxx - Resultados Reais" 
                             frameborder="0" 
                             allowfullscreen
