Fix YouTube video embed URL format

--- a/index.html
+++ b/index.html
@@ -931,7 +931,7 @@
                 <div class="hero-video">
                     <div class="video-wrapper">
                         <iframe 
-                            src="https://www.youtube.com/watch?v=G6t7AZLJqPY" 
+                            src="https://www.youtube.com/embed/watch?v=G6t7AZLJqPY" 
                             title="Ozoxx - Resultados Reais" 
                             frameborder="0" 
                             allowfullscreen
