Update video source and testimonial duration

--- a/index.html
+++ b/index.html
@@ -1159,7 +1159,7 @@
                     <div class="video-container">
                         <div class="video-wrapper">
                             <iframe 
-                                src="https://www.youtube.com/embed/watch?v=NuI72xpM_io" 
+                                src="https://www.youtube.com/embed/KmPiKwxT8MM" 
                                 title="Depoimento Pé Diabético" 
                                 frameborder="0" 
                                 allowfullscreen
@@ -1170,7 +1170,7 @@
                     </div>
                     <div class="testimonial-info">
                         <h3><i class="fas fa-user-circle"></i> Tratamento: Pé Diabético</h3>
-                        <p class="condition"><i class="fas fa-clock"></i> Resultado em 45 dias</p>
+                        <p class="condition"><i class="fas fa-clock"></i> Resultado em algumas semanas</p>
                         <div class="testimonial-text">
                             <p>"Ferida aberta há 2 anos que não cicatrizava. Com Ozoxx, em 45 dias cicatrizou completamente!"</p>
                         </div>
