--- a/index.html
+++ b/index.html
@@ -1160,18 +1160,18 @@
                 <div class="video-container">
                     <div class="video-wrapper">
                         <iframe 
-                            src="https://www.youtube.com/embed/SEU_ID_VIDEO_1" 
-                            title="Depoimento Pé Diabético" 
+                            src="https://www.youtube.com/embed/NZQJ07kNXP4" 
+                            title="Efizema, Depressão e Falta de Ar" 
                             frameborder="0" 
                             allowfullscreen>
                         </iframe>
                     </div>
                 </div>
                 <div class="testimonial-info">
-                    <h3><i class="fas fa-user-circle"></i> Tratamento: Pé Diabético</h3>
-                    <p class="condition"><i class="fas fa-clock"></i> Resultado em 45 dias</p>
+                    <h3><i class="fas fa-user-circle"></i> Tratamento: Efizema, Depressão, Falta de ar</h3>
+                    <p class="condition"><i class="fas fa-clock"></i> Reversão em 20 dias</p>
                     <div class="testimonial-text">
-                        <p>"Ferida aberta há 2 anos que não cicatrizava. Com Ozoxx, em 45 dias cicatrizou completamente!"</p>
+                        <p>"Junho do ano passado minha sogra pegou C0vid, Depressão, diziam que não tinha reversão. Ouça o resultado!"</p>
                     </div>
                 </div>
                 <div class="testimonial-cta">
