Update testimonial text and call-to-action button

--- a/index.html
+++ b/index.html
@@ -1169,13 +1169,13 @@
                 </div>
                 <div class="testimonial-info">
                     <h3><i class="fas fa-user-circle"></i> Tratamento: Efizema, Depressão, Falta de ar</h3>
-                    <p class="condition"><i class="fas fa-clock"></i> Reversão em 20 dias</p>
+                    <p class="condition"><i class="fas fa-clock"></i> Transformação em 20 dias</p>
                     <div class="testimonial-text">
                         <p>"Junho do ano passado minha sogra pegou C0vid, Depressão, diziam que não tinha reversão. Ouça o resultado!"</p>
                     </div>
                 </div>
                 <div class="testimonial-cta">
-                    <a href="#contact" class="btn">QUERO TRATAR PÉ DIABÉTICO</a>
+                    <a href="#contact" class="btn">QUERO O TRATAMENTO</a>
                 </div>
             </div>
             
