--- a/index.html
+++ b/index.html
@@ -1163,6 +1163,7 @@
                             src="https://www.youtube.com/embed/NZQJ07kNXP4" 
                             title="Efizema, Depressão e Falta de Ar" 
                             frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                             allowfullscreen>
                         </iframe>
                     </div>
@@ -1187,6 +1188,7 @@
                             src="https://www.youtube.com/embed/SEU_ID_VIDEO_2" 
                             title="Depoimento Psoríase" 
                             frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                             allowfullscreen>
                         </iframe>
                     </div>
@@ -1211,6 +1213,7 @@
                             src="https://www.youtube.com/embed/SEU_ID_VIDEO_3" 
                             title="Depoimento Artrose" 
                             frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                             allowfullscreen>
                         </iframe>
                     </div>
@@ -1235,6 +1238,7 @@
                             src="https://www.youtube.com/embed/SEU_ID_VIDEO_4" 
                             title="Depoimento Dermatite" 
                             frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                             allowfullscreen>
                         </iframe>
                     </div>
@@ -1259,6 +1263,7 @@
                             src="https://www.youtube.com/embed/SEU_ID_VIDEO_5" 
                             title="Depoimento Fibromialgia" 
                             frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                             allowfullscreen>
                         </iframe>
                     </div>
@@ -1283,6 +1288,7 @@
                             src="https://www.youtube.com/embed/SEU_ID_VIDEO_6" 
                             title="Depoimento Úlcera Varicosa" 
                             frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                             allowfullscreen>
                         </iframe>
                     </div>
@@ -1307,6 +1313,7 @@
                             src="https://www.youtube.com/embed/SEU_ID_VIDEO_7" 
                             title="Depoimento Artrite Reumatoide" 
                             frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                             allowfullscreen>
                         </iframe>
                     </div>
@@ -1331,6 +1338,7 @@
                             src="https://www.youtube.com/embed/SEU_ID_VIDEO_8" 
                             title="Depoimento Tendinite" 
                             frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                             allowfullscreen>
                         </iframe>
                     </div>
@@ -1355,6 +1363,7 @@
                             src="https://www.youtube.com/embed/SEU_ID_VIDEO_9" 
                             title="Depoimento Herpes" 
                             frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                             allowfullscreen>
                         </iframe>
                     </div>
@@ -1379,6 +1388,7 @@
                             src="https://www.youtube.com/embed/SEU_ID_VIDEO_10" 
                             title="Depoimento Circulação" 
                             frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                             allowfullscreen>
                         </iframe>
                     </div>
@@ -1403,6 +1413,7 @@
                             src="https://www.youtube.com/embed/SEU_ID_VIDEO_11" 
                             title="Depoimento Sinusite" 
                             frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                             allowfullscreen>
                         </iframe>
                     </div>
@@ -1427,6 +1438,7 @@
                             src="https://www.youtube.com/embed/SEU_ID_VIDEO_12" 
                             title="Depoimento Queda de Cabelo" 
                             frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                             allowfullscreen>
                         </iframe>
                     </div>
@@ -1451,6 +1463,7 @@
                             src="https://www.youtube.com/embed/SEU_ID_VIDEO_13" 
                             title="Depoimento Lombalgia" 
                             frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                             allowfullscreen>
                         </iframe>
                     </div>
@@ -1475,6 +1488,7 @@
                             src="https://www.youtube.com/embed/SEU_ID_VIDEO_14" 
                             title="Depoimento Acne" 
                             frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                             allowfullscreen>
                         </iframe>
                     </div>
@@ -1499,6 +1513,7 @@
                             src="https://www.youtube.com/embed/SEU_ID_VIDEO_15" 
                             title="Depoimento Insônia" 
                             frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                             allowfullscreen>
                         </iframe>
                     </div>
@@ -1523,6 +1538,7 @@
                             src="https://www.youtube.com/embed/SEU_ID_VIDEO_16" 
                             title="Depoimento Imunidade Baixa" 
                             frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                             allowfullscreen>
                         </iframe>
                     </div>
