Modify YouTube iframe source attributes
Updated YouTube iframe source to include additional parameters.

--- a/index.html
+++ b/index.html
@@ -1160,7 +1160,7 @@
                 <div class="video-container">
                     <div class="video-wrapper">
                         <iframe 
-                            src="https://www.youtube.com/embed/NZQJ07kNXP4" 
+                            src="https://www.youtube.com/embed/NZQJ07kNXP4"rel=0&showinfo=0&controls=1&modestbranding=1" 
                             title="Efizema, Depressão e Falta de Ar" 
                             frameborder="0" 
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
