Refactor YouTube iframe for improved loading

--- a/index.html
+++ b/index.html
@@ -1159,17 +1159,14 @@
             <div class="testimonial-card">
                 <div class="video-container">
                     <div class="video-wrapper">
-                        <div class="video-wrapper">
-    <iframe 
-        src="https://www.youtube.com/embed/NZQJ07kNXP4?rel=0&showinfo=0&controls=1&modestbranding=1" 
-        title="Efizema, Depressão e Falta de Ar" 
-        frameborder="0" 
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-        allowfullscreen
-        loading="lazy"
-        referrerpolicy="strict-origin-when-cross-origin">
-    </iframe>
-</div>
+                        <iframe 
+                            src="https://www.youtube.com/embed/NZQJ07kNXP4" 
+                            title="Efizema, Depressão e Falta de Ar" 
+                            frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                            allowfullscreen>
+                        </iframe>
+                    </div>
                 </div>
                 <div class="testimonial-info">
                     <h3><i class="fas fa-user-circle"></i> Tratamento: Efizema, Depressão, Falta de ar</h3>
