Update button text for testimonials section

--- a/index.html
+++ b/index.html
@@ -1775,7 +1775,7 @@
                     Estes são apenas alguns dos milhares de depoimentos que recebemos diariamente
                 </p>
                 <a href="#contact" class="btn btn-primary btn-lg">
-                    <i class="fas fa-play-circle"></i> Quero Ver Mais Depoimentos
+                    <i class="fas fa-play-circle"></i> Quero saber mais! :D
                 </a>
             </div>
         </div>
