Replace placeholder images with actual product images
imagens dos produtos

--- a/index.html
+++ b/index.html
@@ -1791,13 +1791,7 @@
             
             <div class="products-grid">
                 <!-- Ozoxx MULTI -->
-                <div class="product-card">
-                    <div class="product-image product-image-multi">
-                        <div class="product-badge">Mais Vendido</div>
-                        <div class="placeholder-text" style="text-align: center; padding: 20px;">
-                            <i class="fas fa-image" style="font-size: 4rem; color: var(--secondary); opacity: 0.5;"></i>
-                            <p style="margin-top: 20px; color: var(--gray);">Imagem Ozoxx MULTI</p>
-                            <small>Cole a URL da imagem acima</small>
+                <img src="https://raw.githubusercontent.com/ozoxxvenda/ozoxx-images/refs/heads/main/maquina-de-ozonio-terapia-Ozoxx-Multi.webp" alt="Ozoxx MULTI - Gerador de Ozônio" loading="lazy">
                         </div>
                     </div>
                     <div class="product-content">
@@ -1837,14 +1831,7 @@
                     </div>
                 </div>
                 
-                <!-- Ozoxx AIR -->
-                <div class="product-card">
-                    <div class="product-image product-image-air">
-                        <div class="product-badge">Profissional</div>
-                        <div class="placeholder-text" style="text-align: center; padding: 20px;">
-                            <i class="fas fa-image" style="font-size: 4rem; color: var(--secondary); opacity: 0.5;"></i>
-                            <p style="margin-top: 20px; color: var(--gray);">Imagem Ozoxx AIR</p>
-                            <small>Cole a URL da imagem acima</small>
+                <img src="https://raw.githubusercontent.com/ozoxxvenda/ozoxx-images/refs/heads/main/maquina-de-ozonio-terapia-Ozoxx-AIR.webp" alt="Ozoxx AIR - Sanitizador Profissional" loading="lazy">
                         </div>
                     </div>
                     <div class="product-content">
