--- a/index.html
+++ b/index.html
@@ -1509,7 +1509,7 @@
                         </iframe>
                     </div>
                     <div class="testimonial-video-content">
-                        <h3 class="testimonial-video-title">Radioterapia e Câncer</h3>
+                        <h3 class="testimonial-video-title">"Radioterapia e Câncer"</h3>
                         <p class="testimonial-video-description">"Médica diz: "Seu marido está praticamente curado! O que ele fez?"</p>
                         <div class="testimonial-video-meta">
                             <div class="testimonial-video-condition">Câncer</div>
@@ -1527,7 +1527,7 @@
                         </iframe>
                     </div>
                     <div class="testimonial-video-content">
-                        <h3 class="testimonial-video-title">Autismo</h3>
+                        <h3 class="testimonial-video-title">"Autismo"</h3>
                         <p class="testimonial-video-description">"Avô diz: "Meu neto tinha autismo grau "3", depois de usar o Ozoxx por 30 dias ele ficou 50% mais inteligente, na escola ele já faz tudo"</p>
                         <div class="testimonial-video-meta">
                             <div class="testimonial-video-condition">Autismo</div>
@@ -1545,7 +1545,7 @@
                         </iframe>
                     </div>
                     <div class="testimonial-video-content">
-                        <h3 class="testimonial-video-title">Rinite, Bronquite Asmática, Sinusite e Enxaqueca</h3>
+                        <h3 class="testimonial-video-title">"Rinite, Bronquite Asmática, Sinusite e Enxaqueca"</h3>
                         <p class="testimonial-video-description">"Tomava 3 remédios, não conseguia trabalhar, usei o Ozoxx e melhorei 50% em poucos dias, meu filho com rinite melhorou 90%"</p>
                         <div class="testimonial-video-meta">
                             <div class="testimonial-video-condition">Bronquite</div>
@@ -1563,7 +1563,7 @@
                         </iframe>
                     </div>
                     <div class="testimonial-video-content">
-                        <h3 class="testimonial-video-title">Problema de Próstata</h3>
+                        <h3 class="testimonial-video-title">"Problema de Próstata"</h3>
                         <p class="testimonial-video-description">"Acordava mais de 5x na noite pra ir ao banheiro, hoje graças ao Ozoxx não tenho mais problema na próstata!"</p>
                         <div class="testimonial-video-meta">
                             <div class="testimonial-video-condition">Próstata</div>
@@ -1581,7 +1581,7 @@
                         </iframe>
                     </div>
                     <div class="testimonial-video-content">
-                        <h3 class="testimonial-video-title">Meu irmão fazia Hemodiálise</h3>
+                        <h3 class="testimonial-video-title">"Meu irmão fazia Hemodiálise"</h3>
                         <p class="testimonial-video-description">"Em menos 60 dias a vida do meu irmão mudou, não precisa mais fazer Hemodiálise"</p>
                         <div class="testimonial-video-meta">
                             <div class="testimonial-video-condition">Hemodiálise</div>
@@ -1599,7 +1599,7 @@
                         </iframe>
                     </div>
                     <div class="testimonial-video-content">
-                        <h3 class="testimonial-video-title">Osteoartrite, Artrose, derrame articular, bico de papagaio</h3>
+                        <h3 class="testimonial-video-title">"Osteoartrite, Artrose, derrame articular, bico de papagaio"</h3>
                         <p class="testimonial-video-description">"Em 10 dias de uso do Ozoxx, 90% das dores sumiram. Fazia anos que não vivia bem, comecei a dormir melhor. Eu tinha todos esses problemas, "especialistas" indicavam prótese de quadril, não conseguia subir escada, não conseguia entrar no carro. Ozoxx mudou minha vida!"</p>
                         <div class="testimonial-video-meta">
                             <div class="testimonial-video-condition">Artrose e Bico de Papagaio</div>
@@ -1617,7 +1617,7 @@
                         </iframe>
                     </div>
                     <div class="testimonial-video-content">
-                        <h3 class="testimonial-video-title">Sinusite, e Rinite Alérgica</h3>
+                        <h3 class="testimonial-video-title">"Sinusite, e Rinite Alérgica"</h3>
                         <p class="testimonial-video-description">"Nunca respirei tão bem na minha vida"</p>
                         <div class="testimonial-video-meta">
                             <div class="testimonial-video-condition">Sinusite e Rinite</div>
@@ -1635,7 +1635,7 @@
                         </iframe>
                     </div>
                     <div class="testimonial-video-content">
-                        <h3 class="testimonial-video-title">Enxaqueca</h3>
+                        <h3 class="testimonial-video-title">"Enxaqueca"</h3>
                         <p class="testimonial-video-description">"Eu tinha 2 crises por semana, ficava 2 dias trancado no quarto de tanta dor. Graças ao Ozoxx não tenho mais!"</p>
                         <div class="testimonial-video-meta">
                             <div class="testimonial-video-condition">Enxaqueca</div>
@@ -1653,7 +1653,7 @@
                         </iframe>
                     </div>
                     <div class="testimonial-video-content">
-                        <h3 class="testimonial-video-title">Fazendo hemodiálise</h3>
+                        <h3 class="testimonial-video-title">"Fazendo hemodiálise"</h3>
                         <p class="testimonial-video-description">"Não conseguia nem levantar da cama, graças a essa máquina(Ozoxx) Não precisa mais andar de cadeira de rodas"</p>
                         <div class="testimonial-video-meta">
                             <div class="testimonial-video-condition">Cadeirante</div>
@@ -1671,7 +1671,7 @@
                         </iframe>
                     </div>
                     <div class="testimonial-video-content">
-                        <h3 class="testimonial-video-title">Lúpus Doença Autoimune</h3>
+                        <h3 class="testimonial-video-title">"Lúpus Doença Autoimune"</h3>
                         <p class="testimonial-video-description">"Minhas feridas praticamente secaram. Minha vida mudou depois de usar o Ozoxx."</p>
                         <div class="testimonial-video-meta">
                             <div class="testimonial-video-condition">Lúpus</div>
@@ -1689,7 +1689,7 @@
                         </iframe>
                     </div>
                     <div class="testimonial-video-content">
-                        <h3 class="testimonial-video-title">Trombose nas Pernas</h3>
+                        <h3 class="testimonial-video-title">"Trombose nas Pernas"</h3>
                         <p class="testimonial-video-description">"Médicos diziam que eu não podia fazer o uso do ozônio. Depois de usar o Ozoxx por 30 dias consegui dormi até as 8 horas da manhã"</p>
                         <div class="testimonial-video-meta">
                             <div class="testimonial-video-condition">Trombose</div>
