--- a/index.html
+++ b/index.html
@@ -2118,8 +2118,8 @@
             formStatus.className = 'form-status success';
             formStatus.innerHTML = `
                 <i class="fas fa-check-circle"></i> 
-                <strong>Cadastro realizado com sucesso!</strong><br>
-                Seus dados foram salvos em nossa planilha e entraremos em contato em até 24 horas.
+                <strong>Solicitação realizada com sucesso!</strong><br>
+                Seus dados enviador ao nosso sistema e entraremos em contato em até 24 horas.
             `;
             formStatus.style.display = 'block';
             formStatus.scrollIntoView({ behavior: 'smooth', block: 'center' });
