--- a/home.html
+++ b/home.html
@@ -1417,6 +1417,10 @@
                     <img src="https://raw.githubusercontent.com/ozoxxvenda/ozoxx-images/refs/heads/main/casal-comprando-o-aparelho-ozoxx.webp" alt="Casal comprando Ozoxx" class="client-image" loading="lazy" width="400" height="280">
                 </div>
 
+                <div class="client-card" data-category="all">
+                    <img src="https://raw.githubusercontent.com/ozoxxvenda/ozoxx-images/refs/heads/main/Osvaldo-adquiriu-ozonizador-ozoxx-em-2025.webp" alt="Osvaldo adquiriu ozonizador" class="client-image" loading="lazy" width="400" height="280">
+                </div>
+
                  <div class="client-card" data-category="all">
                     <img src="https://raw.githubusercontent.com/ozoxxvenda/ozoxx-images/refs/heads/main/dona-lurdes-comprando-ozoxx-pra-tratamento-de-sau%CC%81de.webp" alt="dona lurdes comprando" class="client-image" loading="lazy" width="400" height="280">
                 </div>
